...
                style="@style/RatingBar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_activity_title"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/detail_activity_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_bias="0"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
...
