<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_activity_search_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:visibility="gone"
    android:background="@drawable/background_search_toolbar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/search_bar_hint_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:tint="#727272"
        android:src="@drawable/ic_search_autocomplete_24"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/icd_icon_search" />

    <EditText
        android:id="@+id/search_bar_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_view_hint_workmates"
        android:inputType="textCapWords"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/colorTextBlack"
        android:clickable="true"
        android:focusable="true"
        android:background="@null"
        app:layout_constraintStart_toEndOf="@+id/search_bar_hint_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/search_bar_voice_icon"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/search_bar_voice_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_gravity="center"
        android:tint="#727272"
        android:src="@drawable/ic_mic_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/icd_voice_speech_button" />

</androidx.constraintlayout.widget.ConstraintLayout>