<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/ic_search_24"
        app:showAsAction="ifRoom"
        android:title="@string/search_item">
    </item>
</menu>